messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
  namespace: default
spec:
  selector:
    app: messaging-app-blue      # # Switch to app: messaging-app-green later
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
